--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body{
     margin: 0;
+    font-family: "Cinzel Decorative";
 }
 
 .main-div {
@@ -48,6 +49,10 @@ body{
 
 .long-desc{
     margin-left: 10px;
+}
+
+.descriptive-text{
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .row-image-desc{
