--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body{
     margin: 0;
-    font-family: "Cinzel Decorative";
+    font-family: "Permanent Marker";
     background-color: #fafafa;
 }
 
